# Melody-Pattern-Recogniser

./: README.md  Reviewer_PlsReadMe.txt
MelodyPatternRecogniser/: CMakeLists.txt
MelodyPatternRecogniser/src/: convert.cpp
MelodyPatternRecogniser/src/app/acquisition/: convert.cpp  convert.h
MelodyPatternRecogniser/src/app/common/: control.h
MelodyPatternRecogniser/src/ui/: widget.h  widget.ui
src/: convert.h  main.cpp
src/app/common/: control.cpp  control.cpp.autosave
src/ui/: widget.cpp
